--- a/Views/Home/Marca.cshtml
+++ b/Views/Home/Marca.cshtml
@@ -91,6 +91,27 @@
                 //convertir tabla #tabla en Datatable
                 tabladata = $('#tabla').DataTable({
                     responsive:true,
+                    dom: 'frtilpB',
+                    buttons: [
+                        {
+                            extend: 'excelHtml5',
+                            text: '<i class="fas fa-file-excel"></i> ',
+                            titleAttr: 'Exportar a Excel',
+                            className: 'btn btn-success'
+                        },
+                        {
+                            extend: 'pdfHtml5',
+                            text: '<i class="fas fa-file-pdf"></i> ',
+                            titleAttr: 'Exportar a PDF',
+                            className: 'btn btn-danger'
+                        },
+                        {
+                            extend: 'print',
+                            text: '<i class="fa fa-print"></i> ',
+                            titleAttr: 'Imprimir',
+                            className: 'btn btn-info'
+                        }
+                    ],
                     "ajax": {
                         "url": '@Url.Action("ListarMarca", "Home")',
                         "type": "GET",
