Paginacion por categoria

--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -68,6 +68,7 @@
                         <div class="mb-4">
                             <label for="exampleInputPassword1" class="form-label font-weight-bold">Contraseña</label>
                             <input type="password" name="NPassword" class="form-control border-0 " placeholder="Ingresa tu contraseña" id="exampleInputPassword1">
+                            <br />
                             <a href="#" id="emailHelp" class="form-text text-decoration-none text-muted">¿Has olvidado tu contraseña?</a>
                         </div>
                         <div class="mb-4">
@@ -91,7 +92,7 @@
     </div>-->
                 </div>
                 <div class="text-center px-lg-5 pt-lg-3 pb-lg-0 p-2 w-100">
-                    <p class="d-inline-block mb-2">¿Todavia no tienes una cuenta?</p><a href="@Url.Action("Registrarse","Login")" class="text-light font-weight-bold text-decoration-none d-inline-block"> Crea una ahora</a>
+                    <p class="d-inline-block mb-2">¿Todavia no tienes una cuenta?</p><a href="@Url.Action("Registrarse","Login")" class="text-light font-weight-bold text-decoration-none d-inline-block"><u> Crea una ahora</u></a>
                 </div>
             </div>
 
