--- a/Views/Tienda/Carrito.cshtml
+++ b/Views/Tienda/Carrito.cshtml
@@ -33,8 +33,8 @@
                                     <div class="payment-info">
                                         <div class="d-flex justify-content-between align-items-center"><span>Metodo de pago</span></div>
                                         <span class="type d-block mt-3 mb-1">Tipo de tarjeta</span>
-                                        <label class="radio"> <input type="radio" name="card" value="payment" checked> <span><img width="50" src="@Url.Content("~/Imagenes/Tarjetas/master.png")" /></span> </label>
-                                        <label class="radio ml-2"> <input type="radio" name="card" value="payment"> <span><img width="50" src="@Url.Content("~/Imagenes/Tarjetas/visa.png")" /></span> </label>
+                                        <label class="radio"> <input type="radio" name="card" value="payment" checked> <span><img width="50" src="@Url.Content("~/Imagenes/Pago/master.png")" /></span> </label>
+                                        <label class="radio ml-2"> <input type="radio" name="card" value="payment"> <span><img width="50" src="@Url.Content("~/Imagenes/Pago/visa.png")" /></span> </label>
                                         <div>
                                             <label class="credit-card-label mb-1 mt-2">Nombre del Titular</label>
                                             <input type="text" class="form-control credit-inputs" placeholder="Nombre" id="trj_nombre">
