--- a/Views/Tienda/Index.cshtml
+++ b/Views/Tienda/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model IEnumerable<Proyecto05ciclo.Models.Producto>
+
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout_Tienda.cshtml";
@@ -11,27 +12,48 @@
     <div class="py-2 tienda">
         <div class="container px-2 px-lg-2 mt-5">
             <div id="catalogo-productos" class="row gx-4 gx-lg-5 row-cols-1 row-cols-md-3 row-cols-xl-4 justify-content-center">
-
+                @foreach (var item in Model)
+                {
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <img class="card-img-top" src="data:image/@item.extension;base64,@item.base64" + />
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <h5 class="fw-bolder">@item.Nombre</h5>
+                                    @item.Precio
+                                </div>
+                            </div>
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="d-grid d-md-grid gap-2 d-md-block align-items-center text-center">
+                                    <button class="btn btn-outline-dark mt-auto btn-detalle" data-elemento="@Json.Encode(item)">
+                                        Ver Detalle
+                                    </button>
+                                    <button class="btn btn-outline-dark  mt-auto btn-agregar-carrito" data-idproducto="@item.IdProducto">
+                                        Agregar al carrito
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                }
             </div>
+            @if (ViewBag.nropags > 0)
+            {
+                <nav aria-label="Paginacion" class="">
+                    <ul class="pagination justify-content-center">
+                        <li class="page-item">@Html.ActionLink("|<", "Index", new { p = 0,idcategoria=ViewBag.categoria}, new { @class = "page-link" })</li>
+                        <li class="page-item">@Html.ActionLink("<<", "Index", new { p = (ViewBag.p - 1 < 0 ? 0 : ViewBag.p - 1),idcategoria=ViewBag.categoria }, new { @class = "page-link" })</li>
+                        @Html.Label(((int)ViewBag.p + 1).ToString(), new { @class = "page-link" })
+                        <li class="page-item">@Html.ActionLink(">>", "Index", new { p = (ViewBag.p + 1 > ViewBag.nropags - 1 ? ViewBag.nropags - 1 : ViewBag.p + 1), idcategoria=ViewBag.categoria}, new { @class = "page-link " })</li>
+                        <li class="page-item">@Html.ActionLink(">|", "Index", new { p = ViewBag.nropags - 1 ,idcategoria=ViewBag.categoria}, new { @class = "page-link" })</li>
+                    </ul>
+                </nav>
+            }
         </div>
     </div>
-    <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-center">
-            <li class="page-item disabled">
-                <a class="page-link">Previous</a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-                <a class="page-link" href="#">Next</a>
-            </li>
-        </ul>
-    </nav>
 </div>
 
 @section scripts{
-
     <script>
 
         $(".btn-ver-categoria").click(function () {
@@ -46,12 +68,12 @@
                     $(".row-categoria").LoadingOverlay("hide");
                     if (data.data != null) {
                         $("<li>").addClass("dropdown-item").append(
-                            $("<button>").addClass("btn btn-outline-dark btn-categoria m-1 w-100").text("Todos").attr({ "onclick": "listarProductos(0)" })
+                            $("<a>").addClass("btn btn-outline-dark btn-categoria m-1 w-100").attr("href", "@Url.Action("Index","Tienda")").text("Mostrar Todo")
                         ).appendTo(".row-categoria");
 
                         $.each(data.data, function (i, item) {
                             $("<li>").addClass("dropdown-item").append(
-                                $("<button>").addClass("btn btn-outline-dark btn-categoria m-1 w-100").text(item.Descripcion).attr({ "onclick": "listarProductos(" + item.IdCategoria + ")" })
+                                $("<a>").addClass("btn btn-outline-dark btn-categoria m-1 w-100").attr("href", "@Url.Action("Index","Tienda")"+ "?idcategoria="+item.IdCategoria).text(item.Descripcion)
                             ).appendTo(".row-categoria");
                         });
                     }
@@ -60,7 +82,7 @@
                     console.log(error);
                 },
                 beforeSend: function () {
-                    
+
                     $(".row-categoria").LoadingOverlay("show");
                 },
             });
@@ -78,62 +100,5 @@
         $(document).on('click', '.btn-categoria', function (event) {
             $('#exampleModal').modal('hide');
         });
-
-
-        function listarProductos(_idcategoria) {
-            jQuery.ajax({
-                url: '@Url.Action("ListarProducto", "Tienda")',
-                type: "POST",
-                data: JSON.stringify({ idcategoria: _idcategoria}),
-                dataType: "json",
-                contentType: "application/json; charset=utf-8",
-                success: function (data) {
-                    $("#catalogo-productos").html("");
-
-                    $("#catalogo-productos").LoadingOverlay("hide");
-                    if (data.data != null) {
-
-                        $.each(data.data, function (i, item) {
-                            //catalogo-productos
-                            $("<div>").addClass("col mb-5").append(
-                                $("<div>").addClass("card h-100").append(
-                                    $("<img>").addClass("card-img-top").attr({ "src": "data:image/" + item.extension + ";base64," + item.base64 }),
-                                    //Product details
-                                    $("<div>").addClass("card-body p-4").append(
-                                        $("<div>").addClass("text-center").append(
-                                            $("<h5>").addClass("fw-bolder").text(item.Nombre),
-                                            "S/. " + item.Precio
-                                        )
-                                    ),
-                                    //Product actions
-                                    $("<div>").addClass("card-footer p-4 pt-0 border-top-0 bg-transparent").append(
-                                        $("<div>").addClass("d-grid d-md-grid gap-2 d-md-block align-items-center text-center").append(
-                                            $("<button>").addClass("btn btn-outline-dark mt-auto btn-detalle").text("Ver Detalle").attr({ "data-elemento": JSON.stringify(item) }),
-                                           @{
-                                               if (((Proyecto05ciclo.Models.Usuario)Session["Usuario"]).EsAdministrador == false) {
-                                                    @:$("<button>").addClass("btn btn-outline-dark mt-auto btn-agregar-carrito").data("idproducto", item.IdProducto).text("Agregar al carrito")
-                                               }
-                                           }
-
-                                        )
-                                    )
-                                )
-
-                            ).appendTo("#catalogo-productos");
-                        });
-                    }
-                },
-                error: function (error) {
-                    console.log(error)
-                },
-                beforeSend: function () {
-                    $("#catalogo-productos").LoadingOverlay("show");
-                },
-            });
-        }
-
     </script>
-
-
-
 }
