--- a/Views/Shared/_Layout_Tienda.cshtml
+++ b/Views/Shared/_Layout_Tienda.cshtml
@@ -68,7 +68,130 @@
     <main class="container-fluid">
         @RenderBody()
     </main>
-    
+    <!-- Footer -->
+    <footer class="bg-dark text-center text-white">
+        <!-- Grid container -->
+        <div class="container p-4">
+            <!-- Section: Social media -->
+            <p>Siguenos:</p>
+            <section class="mb-4">
+                <!-- Facebook -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+
+                <!-- Twitter -->
+                <a class="btn btn-outline-light btn-floating m-1" href="https://twitter.com/CiberTweets" target="_blank" role="button">
+                    <i class="fab fa-twitter"></i>
+                </a>
+
+                <!-- Instagram -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                    <i class="fab fa-instagram"></i>
+                </a>
+
+                <!-- Linkedin -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+            </section>
+            <!-- Section: Social media -->
+            <!-- Section: Form -->
+            <section class="">
+                <form action="">
+                    <!--Grid row-->
+                    <div class="row d-flex justify-content-center">
+                        <!--Grid column-->
+                        <div class="col-auto">
+                            <p class="pt-2">
+                                <strong>Suscribete a nuestro boletin</strong>
+                            </p>
+                        </div>
+                        <!--Grid column-->
+                        <!--Grid column-->
+                        <div class="col-md-5 col-12">
+                            <!-- Email input -->
+                            <div class="form-outline form-white mb-4">
+                                <input type="email" placeholder="Ingresa tu correo electronico" id="form5Example21" class="form-control" />
+                            </div>
+                        </div>
+                        <!--Grid column-->
+                        <!--Grid column-->
+                        <div class="col-auto">
+                            <!-- Submit button -->
+                            <button type="submit" class="btn btn-outline-light mb-4">
+                                Suscribirse
+                            </button>
+                        </div>
+                        <!--Grid column-->
+                    </div>
+                    <!--Grid row-->
+                </form>
+            </section>
+            <!-- Section: Form -->
+            <!-- Section: Text -->
+            <section class="mb-4">
+                <p>
+                    Gametec ofrece productos totalmente confiables, se asegura de que el cliente vea el proceso desde que se escoge el juego hasta que se procede con el pago, siendo todo totalmente transparente.
+                </p>
+            </section>
+            <!-- Section: Text -->
+            <!-- Section: Links -->
+            <section class="">
+                <!--Grid row-->
+                <div class="row">
+                    <!--Grid column-->
+                    <div class="col-lg-6 col-md-6 mb-4 mb-md-0">
+                        <h5 class="text-uppercase">Mapa de Sitio</h5>
+
+                        <ul class="list-group mb-0">
+                            <li>
+                                <a href="#!" class="text-white">Inicio</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white">Carrito</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white">Compras</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white">Perfil de Usuario</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!--Grid column-->
+                    <!--Grid column-->
+                    <div class="col-lg-6 col-md-6 mb-4 mb-md-0">
+                        <h5 class="text-uppercase">Contacto</h5>
+                        <ul class="list-unstyled mb-0">
+                            <li>
+                                <a href="#!" class="text-white">Direccion</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white">Whatsapp</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white">Consultas y sugerencias</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white">Medios de pago</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <!--Grid row-->
+            </section>
+            <!-- Section: Links -->
+        </div>
+        <!-- Grid container -->
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2021 Copyright:
+            <a class="text-white" href="https://www.cibertec.edu.pe/" target="_blank">GAMETEC</a>
+        </div>
+        <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
 
     <div class="position-fixed top-0 end-0 p-3 mt-5" style="z-index: 5">
         <div id="toast-carrito" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="2000">
