--- a/Views/Tienda/Index.cshtml
+++ b/Views/Tienda/Index.cshtml
@@ -55,7 +55,7 @@
 
 @section scripts{
     <script>
-
+        //pasar metodo al layout
         $(".btn-ver-categoria").click(function () {
             jQuery.ajax({
                 url: '@Url.Action("ListarCategoria", "Tienda")',
