Link de registro hacia login

--- a/Views/Home/Usuario.cshtml
+++ b/Views/Home/Usuario.cshtml
@@ -24,12 +24,12 @@
                 <form id="formNivel">
                     <div class="row">
                         <div class="col-sm-6">
-                            <div class="mb-2">
-                                <img id="img_producto" height="198" width="200" class="border border-dark" />
-                            </div>
-                            <div class="mb-2">
-                                <input class="form-control" type="file" id="imgproducto" onchange="readURL(this);">
-                            </div>
+                            <!-- <div class="mb-2">
+                                 <img id="img_producto" height="198" width="200" class="border border-dark" />
+                             </div>
+                             <div class="mb-2">
+                                 <input class="form-control" type="file" id="imgproducto" onchange="readURL(this);">
+                             </div>-->
                         </div>
                        
                     </div>
@@ -73,8 +73,8 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="form-group">
-                                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Volver</button>
-                                <button type="button" class="btn btn-primary" onclick="Guardar()">Guardar</button>
+                                <!--<button type="button" class="btn btn-danger" data-bs-dismiss="modal">Volver</button>
+                                    <button type="button" class="btn btn-primary" onclick="Guardar()">Guardar</button>-->
                             </div>
                         </div>
                     </div>
