--- a/Views/Login/Registrarse.cshtml
+++ b/Views/Login/Registrarse.cshtml
@@ -72,7 +72,7 @@
                                     </form>
                                 </div>
                                 <div class="card-footer text-center py-3">
-
+                                    <div>¿Ya tienes una cuenta? <a class="fw-bold text-white" href="@Url.Action("Index","Login")">Inicia Sesión</a></div>
                                 </div>
                             </div>
                         </div>
