fixes de layout

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,9 +2,9 @@
     ViewBag.Title = "Dashboard administrador";
 }
 
-<h1 class="mt-4">Dashboard</h1>
+<h1 class="mt-4">Dashboard de Administrador</h1>
 <ol class="breadcrumb mb-4">
-    <li class="breadcrumb-item active">Mantenimiento</li>
+    <li class="breadcrumb-item active">Mantenimiento de Juegos  </li>
 </ol>
 <div class="row">
     <div class="col-sm-4">
