--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -71,7 +71,9 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-store"></i></div>Ver Tienda
                         </a>
                         <a class="nav-link" href="@Url.Action("Index","Tienda")" target="_blank">
-                            <div class="sb-nav-link-icon"><i class="fas fa-store"></i></div>Redes Sociales
+                            <div class="sb-nav-link-icon">         
+                                <i class="fas fa-share-alt"></i>
+                            </div>Redes Sociales
                         </a>
                     </div>
                 </div>
