--- a/Views/Tienda/Compras.cshtml
+++ b/Views/Tienda/Compras.cshtml
@@ -13,7 +13,7 @@
         <h3>Mis Compras</h3>
     </div>
 </div>
-<div class="row mt-2">
+<div class="row mt-2" style="margin-bottom: 200px;">
     <div class="col-12">
         <div class="card">
             <div class="card-body bg-dark">
